# cpp_hometasks

./: Doxyfile  README.md  index.md  ip_filter
.github/workflows/: documentation.yml  release.yml
01/: CMakeLists.txt  main.cpp  test_version_google.cpp
01/task/: task.md
02/: CMakeLists.txt
02/src/: ip_address.cpp  ip_address.h  ip_address.hpp  ip_filter.cpp  ip_filter.h  main.cpp
02/task/: task.md
02/tests/: ip_filter_tests.cpp
03/: CMakeLists.txt
03/src/: custom_allocator.cpp  custom_allocator.hpp  custom_container.hpp  custom_vector.cpp  main.cpp
03/task/: task.md
03/timus/1264/: main.cpp
03/timus/1409/: main.cpp
03/timus/1787/: main.cpp
03/timus/1877/: main.cpp
03/timus/2001/: main.cpp
04/: CMakeLists.txt
04/src/: main.cpp  printer.cpp  printer.h  printer.hpp
04/task/: task.md
04/tests/: printer_tests.cpp
04/timus/1000/: main.cpp
04/timus/1001/: main.cpp
04/timus/1197/: main.cpp
04/timus/1293/: main.cpp
04/timus/1785/: main.cpp
04/timus/1820/: main.cpp
04/timus/1880/: main.cpp
04/timus/2012/: main.cpp
04/timus/2066/: main.cpp
04/timus/2100/: main.cpp
05/: CMakeLists.txt
05/diagram/: diagram
05/src/: circle.cpp  circle.h  controller.cpp  controller.h  editor.cpp  editor.h  feature.cpp  feature.h  main.cpp  model.cpp  model.h  rectangle.cpp  rectangle.h  view.cpp  view.h
05/task/: task.md
05/tests/: editor_tests.cpp
05/timus/1139/: main.cpp
05/timus/1612/: main.cpp
05/timus/2010/: main.cpp
05/timus/2033/: main.cpp
06/: CMakeLists.txt
06/src/: main.cpp  matrix.hpp
06/task/: task.md
06/tests/: matrix_tests.cpp
06/timus/1413/: main.cpp
06/timus/1628/: main.cpp
06/timus/1685/: main.cpp
06/timus/2115/: main.cpp
07/: CMakeLists.txt
07/src/: bulk.cpp  bulk.h  main.cpp
07/task/: task.md
07/tests/: bulk_tests.cpp
07/timus/1249/: main.cpp  script.py
07/timus/1298/: main.cpp
07/timus/1656/: main.cpp
08/: CMakeLists.txt  readme.md
08/data/1/: c.txt
08/data/except1/: b3_except.txt
08/src/: bayan.cpp  bayan.h  duplicate_finder.cpp  duplicate_finder.h  main.cpp
08/task/: task.md
08/tests/: bayan_tests.cpp
09/: CMakeLists.txt
09/src/: async.cpp  async.h  command_analyzer.hpp  command_parser.hpp  command_printer.hpp  command_processor.hpp  main.cpp  multithreading_bulk.cpp  multithreading_bulk.h
09/task/: task.md
09/tests/: multithreading_bulk_tests.cpp
10/: CMakeLists.txt
10/src/: async_server.cpp  async_server.h  async_server.hpp  command_analyzer.hpp  command_parser.hpp  command_printer.hpp  command_processor.hpp  main.cpp  model.hpp
10/task/: task.md
html/: 01_2main_8cpp.html  01_2main_8cpp__incl.map  01_2main_8cpp__incl.md5  01_2task_2task_8md.html  02_2src_2main_8cpp.html  02_2src_2main_8cpp__incl.map  02_2src_2main_8cpp__incl.md5  02_2task_2task_8md.html  03_2src_2main_8cpp.html  03_2task_2task_8md.html  03_2timus_21264_2main_8cpp.html  03_2timus_21264_2main_8cpp__incl.map  03_2timus_21264_2main_8cpp__incl.md5  03_2timus_21409_2main_8cpp.html  03_2timus_21409_2main_8cpp__incl.map  03_2timus_21409_2main_8cpp__incl.md5  03_2timus_21787_2main_8cpp.html  03_2timus_21787_2main_8cpp__incl.map  03_2timus_21787_2main_8cpp__incl.md5  03_2timus_21877_2main_8cpp.html  03_2timus_21877_2main_8cpp__incl.map  03_2timus_21877_2main_8cpp__incl.md5  03_2timus_22001_2main_8cpp.html  03_2timus_22001_2main_8cpp__incl.map  03_2timus_22001_2main_8cpp__incl.md5  04_2src_2main_8cpp.html  04_2src_2main_8cpp__incl.map  04_2src_2main_8cpp__incl.md5  04_2task_2task_8md.html  04_2timus_21000_2main_8cpp.html  04_2timus_21000_2main_8cpp__incl.map  04_2timus_21000_2main_8cpp__incl.md5  04_2timus_21001_2main_8cpp.html  04_2timus_21001_2main_8cpp__incl.map  04_2timus_21001_2main_8cpp__incl.md5  04_2timus_21197_2main_8cpp.html  04_2timus_21197_2main_8cpp__incl.map  04_2timus_21197_2main_8cpp__incl.md5  04_2timus_21293_2main_8cpp.html  04_2timus_21293_2main_8cpp__incl.map  (+1532 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+43 more)
latex/: 01_2main_8cpp.tex  01_2main_8cpp__incl.md5  01_2task_2task_8md.tex  02_2src_2main_8cpp.tex  02_2src_2main_8cpp__incl.md5  02_2task_2task_8md.tex  03_2src_2main_8cpp.tex  03_2task_2task_8md.tex  03_2timus_21264_2main_8cpp.tex  03_2timus_21264_2main_8cpp__incl.md5  03_2timus_21409_2main_8cpp.tex  03_2timus_21409_2main_8cpp__incl.md5  03_2timus_21787_2main_8cpp.tex  03_2timus_21787_2main_8cpp__incl.md5  03_2timus_21877_2main_8cpp.tex  03_2timus_21877_2main_8cpp__incl.md5  03_2timus_22001_2main_8cpp.tex  03_2timus_22001_2main_8cpp__incl.md5  04_2src_2main_8cpp.tex  04_2src_2main_8cpp__incl.md5  04_2task_2task_8md.tex  04_2timus_21000_2main_8cpp.tex  04_2timus_21000_2main_8cpp__incl.md5  04_2timus_21001_2main_8cpp.tex  04_2timus_21001_2main_8cpp__incl.md5  04_2timus_21197_2main_8cpp.tex  04_2timus_21197_2main_8cpp__incl.md5  04_2timus_21293_2main_8cpp.tex  04_2timus_21293_2main_8cpp__incl.md5  04_2timus_21785_2main_8cpp.tex  04_2timus_21785_2main_8cpp__incl.md5  04_2timus_21820_2main_8cpp.tex  04_2timus_21820_2main_8cpp__incl.md5  04_2timus_21880_2main_8cpp.tex  04_2timus_21880_2main_8cpp__incl.md5  04_2timus_22012_2main_8cpp.tex  04_2timus_22012_2main_8cpp__incl.md5  04_2timus_22066_2main_8cpp.tex  04_2timus_22066_2main_8cpp__incl.md5  04_2timus_22100_2main_8cpp.tex  (+680 more)
sandbox/: CMakeLists.txt  example.cpp  example.h  main.cpp
